css/style.css
/* CSS RESET */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* CUSTOM PROPERTIES */
:root {
    --primary-color: #b91450;
    --secondary-color: #808080;
    --tertiary-color: lightgray;
    --size-sm: 0.8rem;
    --size-md: 1rem;
}

/* Utils */
.container {
    max-width: 1000px;
    margin: 0 auto;
}

.d-none {
    display: none;
}

.p-2 {
    padding: var(--size-sm);
}

.p-3 {
    padding: var(--size-md);
}

.py-3 {
    padding: var(--size-md) 0rem;
}

.shadow {
    box-shadow: 7px 15px 20px rgba(0, 0, 0, 0.5)
}

.row {
    display: flex;
    align-items: center;
}

.border {
    border-style: solid;
    border-width: 2px 0px 2px 0px;
    border-color: gray;
}

.col-3 {
    width: calc((100% / 12) * 4);
    height: 100px;
}

.col-5 {
    width: calc((100% / 12) * 5);
    height: 100px;
}

p {
    text-align: left;
}

.flex-column-between {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

/* Body */
body {
    background: var(--primary-color);
    font-family: 'Montserrat', sans-serif;
}

h1 {
    color: white;
}

/* Main */
main {
    text-align: center;
}

section {
    width: 100%;
}

main>div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

/* Input Section */
.input-section .card {
    background-color: white;
    color: var(--primary-color);
    border-radius: 10px;
    text-align: center;
}

label {
    font-weight: 600;
}

input,
select {
    padding: 5px;
    border-radius: 8px;
    border-color: var(--primary-color);
}

button {
    color: var(--primary-color);
    border-color: var(--primary-color);
    font-size: 20px;
    border-radius: 5px;
    padding: 5px;
    font-weight: 600;
    background-color: var(--tertiary-color);
}

select:focus,
button:focus {
    border: 2px solid orange;
}

/* Ticket Section */
.ticket-section .card {
    background-color: white;
}

.ticket h2,
.ticket h3 {
    text-align: left;
}

.ticket-head {
    background-color: var(--secondary-color);
}

